<resources>
    <string name="facebook_app_id">203507240746681</string>
    <string name="fb_login_protocol_scheme">fb203507240746681</string>
    <string name="app_name">desarrollo</string>
    <string name="avisoRegistroHijos">Antes de comenzar debemos registrar algunos datos empezando con los de sus hijo(s)</string>
    <string name="preguntaRegistroHijos">¿Cuántos hijos registrara?</string>
    <string name="txtMas">Mas</string>
    <string name="btmAceptar">Aceptar</string>
    <string name="btmNumero">Cantidad</string>
    <string name="new_notification">Notificacion</string>
    <string name="avisoRegistroHijo_2">Debera llenar los datos que se le piden a continuación de acuedo a la cantidad de hijos.</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>
    <string name="estatura">Estatura</string>
    <string name="peso">Peso</string>
    <string name="medida_de_cintura">Medida de cintura</string>
    <string name="txtRegistro">Registro</string>
    <string name="btmRegresar">Regresar</string>
    <string name="excelete">¡¡Excelente!!</string>
    <string name="avisoRegistroFinalizado"> Ha terminado de registrar a su hijo ahora lo auto evaluaremos para una mejor gestión en la aplicación.</string>
    <string name="avisoCuestionarioPregunta1">Esta es una encuenta, no una prueba conteste a conciencia si no sabes la respuesta, marca "no estoy seguro".</string>
    <string name="cuestionarioPreguntaUno">¿Los expertos en salud recomiendan que las personas coman más, la misma cantidad o menos de los siguientes alimentos? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta1">FRUTA</string>
    <string name="cuestionarioRespuestaDosPregunta1">VERDURA</string>
    <string name="cuestionarioRespuestaTresPregunta1">ALIMENTOS GRASOS</string>
    <string name="cuestionarioRespuestaCuatroPregunta1">CARNE ROJA PROCESADA</string>
    <string name="cuestionarioRespuestaCincoPregunta1">GRANOS INTEGRALES</string>
    <string name="cuestionarioRespuestaSeisPregunta1">ALIMENTOS SALADOS</string>
    <string name="cuestionarioRespuestaSietePregunta1">AGUA</string>
    <string name="avisoCuestionarioPregunta2">Esta es una encuenta, no una prueba conteste a conciencia.</string>
    <string name="cuestionarioPreguntaDos">. ¿Cuántas porciones de frutas y verduras por día aconsejan los expertos que coman como mínimo? (Una porción podría ser, por ejemplo, una manzana o un puñado de zanahorias picadas) (marque una)</string>
    <string name="btnMas">Mas</string>
    <string name="btnIgual">Igual</string>
    <string name="btnMenos">Menos</string>
    <string name="btnNoEstoySeguro">No estoy seguro</string>
    <string name="btnSiguiente">SIGUIENTE</string>
    <string name="btnComerMenos">Comer menos</string>
    <string name="btnNoComerMenos">No comer menos</string>
    <string name="btnNoEstoySeguro2">No estoy seguro</string>
    <string name="txtIncisoRespuesta2">GRASAS INSATURADAS</string>
    <string name="cuestionarioPreguntaCuatro">¿Qué tipo de productos lácteos dicen los expertos que las personas deberían beber? (marque una)</string>
    <string name="CheckBox_Pregunta4_1">Grasa completa (por ejemplo, leche entera)</string>
    <string name="CheckBox_Pregunta4_2">Reducción de grasa (por ejemplo, leche desnatada y semidesnatada)</string>
    <string name="CheckBox_Pregunta4_3">Mezcla de grasas completas y grasas reducidas</string>
    <string name="CheckBox_Pregunta4_4">Tampoco deben evitarse los lácteos</string>
    <string name="CheckBox_Pregunta4_5">No estoy seguro</string>
    <string name="cuestionarioPreguntaCinco">¿Cuántas veces por semana recomiendan los expertos que las personas coman pescado azul (por ejemplo, salmón y caballa)? (marque una)</string>
    <string name="CheckBox_pregunta5_1">1-2 veces por semana</string>
    <string name="CheckBox_pregunta5_2">3-4 veces por semana</string>
    <string name="CheckBox_pregunta5_3">Cada día</string>
    <string name="CheckBox_pregunta5_4">No estoy seguro</string>
    <string name="cuestionarioPreguntaSeis">¿Aproximadamente cuántas bebidas alcohólicas es el máximo recomendado por día (el número exacto depende del tamaño y la concentración de la bebida)? (marque uno) </string>
    <string name="CheckBox_pregunta6_1">1 bebida para hombres y mujeres</string>
    <string name="CheckBox_pregunta6_2">2 bebidas para hombres y mujeres</string>
    <string name="CheckBox_pregunta6_3">2 bebidas para hombres y 1 bebida para mujeres</string>
    <string name="CheckBox_pregunta6_4">3 bebidas para hombres y 2 bebidas para mujeres</string>
    <string name="CheckBox_pregunta6_5">No estoy seguro</string>
    <string name="cuestionarioPreguntaSeptima">¿Cuántas veces por semana recomiendan los expertos que las personas desayunen? (marque una)</string>
    <string name="CheckBox_pregunta7_1">3 veces por semana</string>
    <string name="CheckBox_pregunta7_2">4 veces por semana</string>
    <string name="CheckBox_pregunta7_3">Todos los días</string>
    <string name="CheckBox_pregunta7_4">No estoy seguro</string>
    <string name="cuestionarioPreguntaOctava">Si una persona toma dos vasos de jugo de fruta en un día, ¿cuántas de sus porciones diarias de frutas y verduras contaría? (marque una)</string>
    <string name="CheckBox_pregunta8_1">Ninguno</string>
    <string name="CheckBox_pregunta8_2">Una porción</string>
    <string name="CheckBox_pregunta8_3">Dos porciones</string>
    <string name="CheckBox_pregunta8_4">Tres porciones</string>
    <string name="CheckBox_pregunta8_5">No estoy seguro</string>
    <string name="cuestionarioPreguntaNovena_seccion1">De acuerdo con la "guía eatwell" (una guía que muestra las proporciones de los tipos de alimentos que las personas deben comer para tener una dieta equilibrada y saludable), ¿cuánto de la dieta de una persona debe estar compuesta de alimentos ricos en almidón? (marque una)</string>
    <string name="CheckBox_pregunta9_1_seccion1">Un cuarto</string>
    <string name="CheckBox_pregunta9_2_seccion1">Un tercio</string>
    <string name="CheckBox_pregunta9_3_seccion1">La mitad</string>
    <string name="CheckBox_pregunta9_4_seccion1">No estoy seguro</string>
    <string name="cuestionarioPreguntaUno_seccion2">¿Crees que estos alimentos y bebidas son típicamente altos o bajos en azúcar agregada? (marque una casilla por comida) </string>
    <string name="btnAltoAzucar">Alto en azúcar</string>
    <string name="btnBajoAzuczr">Bajo en azúcar</string>
    <string name="cuestionarioRespuestaUnoPregunta1_Seccion2">BEBIDAS DE COLA DIETETICAS</string>
    <string name="btnAltoSal">Alto en sal</string>
    <string name="btnBajoSal">Bajo en sal</string>
    <string name="cuestionarioPregunta2_seccion2">¿Crees que estos alimentos son típicamente altos o bajos en sal? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta2_Seccion2">Cereales para el desayuno</string>
    <string name="btnAltoFibra">Alto en fibra</string>
    <string name="btnBajoFibra">Bajo en fibra</string>
    <string name="cuestionarioPregunta3_seccion2">¿Crees que estos alimentos son típicamente altos o bajos en fibra? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta3_Seccion2">Avena</string>
    <string name="btnBuenaFuente">Buena fuente</string>
    <string name="btnNoBuenaFuente">No es buena fuente</string>
    <string name="cuestionarioPregunta4_seccion2">¿Crees que estos alimentos son una buena fuente de proteínas? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta4_Seccion2">Aves de corral</string>
    <string name="btnConAlmidon">Con almidón</string>
    <string name="btnSinAlmidon">Sin almidón</string>
    <string name="cuestionarioPregunta5_seccion2">¿Cuáles de los siguientes alimentos cuentan los expertos como alimentos con almidón? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta5_Seccion2">Queso</string>
    <string name="btnGrasaPolinisaturada">Gasas polinisaturadas</string>
    <string name="btnGrasaInsaturada">Grasas insaturadas</string>
    <string name="btnGrasaSaturada">Grasas saturadas</string>
    <string name="btnColesterol">Colesterol</string>
    <string name="cuestionarioPregunta6_seccion2">¿Cuál es el principal tipo de grasa presente en cada uno de estos alimentos? (marque una casilla por comida)</string>
    <string name="cuestionarioRespuestaUnoPregunta6_Seccion2">Aceite de oliva</string>
    <string name="CheckBox_pregunta7_1_seccion2">Galletas, pasteles y pasteles</string>
    <string name="CheckBox_pregunta7_2_seccion2">Pescado</string>
    <string name="CheckBox_pregunta7_3_seccion2">Aceite de colza</string>
    <string name="CheckBox_pregunta7_4_seccion2">Huevos</string>
    <string name="cuestionarioPregunta7_seccion2">¿Cuál de estos alimentos tiene más grasas trans? (marque uno)</string>
    <string name="CheckBox_pregunta8_1_seccion2">La misma</string>
    <string name="CheckBox_pregunta8_2_seccion2">Mucho más alto</string>
    <string name="CheckBox_pregunta8_3_seccion2">Mucho más bajo</string>
    <string name="cuestionarioPregunta8_seccion2">La cantidad de calcio en un vaso de leche entera en comparación con un vaso de leche desnatada es: (marque uno)</string>
    <string name="CheckBox_pregunta9_1_seccion2">Azúcar</string>
    <string name="CheckBox_pregunta9_2_seccion2">Almidón</string>
    <string name="CheckBox_pregunta9_3_seccion2">Fibra / alimentos ricos en fibra</string>
    <string name="CheckBox_pregunta9_4_seccion2">Grasa</string>
    <string name="cuestionarioPregunta9_seccion2">¿Cuál de los siguientes nutrientes tiene más calorías para el mismo peso?</string>
    <string name="CheckBox_pregunta10_1_seccion2">Mayor en calorías</string>
    <string name="CheckBox_pregunta10_2_seccion2">Mayor en fibra</string>
    <string name="CheckBox_pregunta10_3_seccion2">Menor en sal</string>
    <string name="cuestionarioPregunta10_seccion2">En comparación con los alimentos mínimamente procesados, los alimentos procesados son: (marque uno)</string>
    <string name="CheckBox_pregunta1_1_seccion3">Yogurt 0% de cereza</string>
    <string name="CheckBox_pregunta1_2_seccion3">Yogurt natural</string>
    <string name="CheckBox_pregunta1_3_seccion3">Yogurt de fruta cremoso</string>
    <string name="cuestionarioPregunta1_seccion3">Si una persona quisiera comprar un yogurt en el supermercado, ¿cuál tendría menos azúcar / edulcorante? (marque uno)</string>
    <string name="CheckBox_pregunta2_1_seccion3">Sopa de risotto de champiñones (champiñones, setas, arroz arbóreo, mantequilla, crema, perejil y pimienta negra molida)</string>
    <string name="CheckBox_pregunta2_2_seccion3">Sopa de zanahoria y especias (zanahoria, calabaza, camote, comino, chile rojo, semillas de cilantro y limón)</string>
    <string name="CheckBox_pregunta2_3_seccion3">Crema de pollo (pollo británico, cebolla, zanahoria, apio, papas, ajo, salvia, harina de trigo, crema doble) </string>
    <string name="cuestionarioPregunta2_seccion3">Si una persona quisiera sopa en un restaurante o cafetería, ¿cuál sería la opción con menos grasa? (marque una)</string>
    <string name="CheckBox_pregunta3_1_seccion3">Carne de res, pudín de Yorkshire y papas asadas</string>
    <string name="CheckBox_pregunta3_2_seccion3">Pescado y papas fritas servidas con guisantes y salsa tártara</string>
    <string name="qu_reacci_n_tuvo_su_hijo_al_consumir_este_alimento">¿Qué reacción tuvo su hijo al consumir este alimento?</string>
    <string name="terrible">Terrible</string>
    <string name="esta_bien">Está bien</string>
    <string name="genial">Genial</string>
    <string name="alimentaci_n">ALIMENTACIÓN</string>
    <string name="s_a_n_a">S A N A</string>
    <string name="registrarse">Registrarse</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
</resources>